1998-07-03  Manish Singh  <yosh@gimp.org>

	* esdcat.c: pass a valid pointer for name in esd_play_stream_callback
	(quick fix; esdlib should really do proper arg checking)

1998-07-01  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_irix.c, configure.in: fixed audio_irix driver. works on an
	Octane.  Autoconf tools are a little weird on irix.  had to manually
	tweak the generated makefile to remove .deps references. added
	lib check routines to find -laudio. look into improving autoconf-irix

1998-06-28  Raja R Harinath  <harinath@cs.umn.edu>

	* clients.c (wait_for_clients_and_data): Return 0.
	(get_new_clients): Remove validation code.  Moved to
	`poll_client_requests' (in proto.c).	
	* proto.c: (esd_proto_lock): Likewise.
	(esd_proto_unlock): Likewise.
	(esd_proto_standby): Likewise.
	(esd_proto_resume): Likewise.
	(poll_client_requests): Centralize validation.  Move invocation of
	`esd_proto_{lock,unlock,standby,resume}' ...
	(do_validated_action): ... here.

	* esd-server.h (struct esd_client): New flag `need_validation'.

	* esdlib.c (esd_lock): Send `ESD_PROTO_LOCK' message, not
	`ESD_PROTO_UNLOCK'. 

1998-06-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* mix.c: removed core-dump causing optimization, thx to keebler.

1998-06-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* players.c: one-liner uninitialized data fix for the occasional
 	random sample killing itself.  Thanks to Chutt for the fix.

1998-06-10  Yo Ric Dude  <ericmit@ix.netcom.com>

	* samples.c, players.c, clients.c: fixed the perpetual looping
	sample problem.  incremented version to 0.2.2 for possible release.

1998-06-06  Yo Ric Dude  <ericmit@ix.netcom.com>

	* samples.c, players.c, clients.c: rigged up the sample freeing
	routines to check reference counts before deleting the samples.

1998-06-06  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.h, esd-server.h: moved some server stuff to esd-server.h.
	also added placeholders for an ADPCM mode, and endian issues.
